[package]
name = "connectbox-shell"
description = "A shell for managing your Connect Box router, based on the connectbox-rs library"
authors = ["lemonsh"]
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = {version = "11", features = ["derive"]}
color-eyre = "0.6"
tokio = { version = "1.0", default-features = false, features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.2", default-features = false, features = ["suggestions", "color", "std", "help", "usage", "derive"] }
dirs = "5.0"
connectbox = { path = "../connectbox" }
color-print = "0.3"
ascii_table = "4.0"
once_cell = "1.17"
