[package]
name = "connectbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", optional = true }
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["cookies"] }
quick-xml = { version = "0.28", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.3"

[dev-dependencies]
color-eyre = "0.6"
tokio = { version = "1.0", default-features = false, features = ["macros"] }
tracing-subscriber = "0.3"
