[package]
name = "connectbox"
description = "API client library for the Compal CH7465LG, which is a cable modem provided by various European ISPs under the name Connect Box."
version = "0.1.1"
edition = "2021"
license = "EUPL-1.2"
repository = "https://git.lemonsh.moe/lemon/connectbox-rs"

[dependencies]
tracing = "0.1"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["cookies"] }
quick-xml = { version = "0.28", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.3"

[dev-dependencies]
color-eyre = "0.6"
tokio = { version = "1.0", default-features = false, features = ["macros"] }
tracing-subscriber = "0.3"